--- a/custom css/style.css
+++ b/custom css/style.css
@@ -3,3 +3,12 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+html{
+    background-color: white;
+    color: #343a40;
+    font-family: 'Lato','Arial','sans-serif';
+    font-size: 20px;
+    font-weight: 300;
+    text-rendering: optimizeLegibility;
+}
