--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ html {
     background-size: cover;
     background-position: center;
     height: 100vh;
-    width: 100vw;
+    width: auto;
 }
 
 /*--------------------------------------------------------*/
@@ -287,7 +287,7 @@ html {
 
 .feature-heading {
     margin-bottom: 20px;
-    margin-top: 20px;
+    margin-top: 70px;
 }
 
 .section-features i {
