--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /*--------------------------------------------------------*/
-/*Basic setup*/
+/*------------------------Basic setup---------------------*/
 /*--------------------------------------------------------*/
 :root {
     /* theme colours */
@@ -26,9 +26,9 @@ html {
     text-rendering: optimizeLegibility;
 }
 
-/*--------------------------------------------------------*/
-/*Reusable components*/
-/*--------------------------------------------------------*/
+/*---------------------------------------------------------------*/
+/*------------------------REUSABLE COMPONENT---------------------*/
+/*---------------------------------------------------------------*/
 .row {
     max-width: 1140px;
     margin: 0 auto;
@@ -37,17 +37,22 @@ html {
 .hidden {
     visibility: hidden;
 }
-
-/*--------------------------------------------------------*/
-/*Headers*/
-/*--------------------------------------------------------*/
-.heading-text,
-.feature-heading{
+/*----------------------------------------------------------------*/
+/*------------------------HEADINGS--------------------------*/
+/*----------------------------------------------------------------*/
+.heading-1,
+.heading-2,
+.heading-3{
     font-weight: 300;
     text-transform: uppercase;
     letter-spacing: 1px;
 }
-.heading-text {
+
+/*--------------------------------------------------------*/
+/*------------------------HEADER--------------------------*/
+/*--------------------------------------------------------*/
+
+.heading-1 {
     margin-top: 0;
     margin-bottom: 20px;
     color: var(--white-color);
@@ -71,7 +76,7 @@ html {
 }
 
 /*--------------------------------------------------------*/
-/*Buttons*/
+/*------------------------BUTTONS--------------------------*/
 /*--------------------------------------------------------*/
 
 .btn:link,
@@ -113,7 +118,7 @@ html {
 }
 
 /*--------------------------------------------------------*/
-/*Navbar*/
+/*------------------------NAVBAR--------------------------*/
 /*--------------------------------------------------------*/
 .logo {
     height: 70px;
@@ -138,7 +143,9 @@ html {
     vertical-align: middle;
     margin-left: 10px;
 }
-
+/*--------------------------------------------------------*/
+/*------------------------MENU--------------------------*/
+/*--------------------------------------------------------*/
 .menu {
     float: right;
     display: inline-block;
@@ -196,9 +203,6 @@ html {
     padding-top: 10px;
 }
 
-.ui-icon {
-    color: var(--white-color);
-}
 
 .btn-sign-up:link,
 .btn-sign-up:visited {
@@ -217,6 +221,47 @@ html {
     padding-bottom: 0px;
 }
 
+.sign-up{
+    padding-bottom: 0px;
+    padding-top: 10px;
+}
+.btn-cart{
+    position: relative;
+    display: inline-block;
+    margin-right: 30px;
+}
+/*--------------------------------------------------------*/
+/*------------------------NOTIFICATIONS BUBBLE --------------------------*/
+/*--------------------------------------------------------*/
+
+.bubble{
+    background-color: var(--base-color);
+    color: white;
+    border-radius: 200px;
+    /*width: 5px;*/
+    height: 5px;
+    font-size: 40%;
+    padding: 3px;
+}
+.cart-bubble-text,
+.user-bubble-text{
+    position: absolute;
+    padding: 5px 7px 5px 7px;
+    height: auto;
+}
+.offers-bubble-text{
+    background-color: var(--white-color);
+    color: var(--base-color-dark);
+    margin-left: 30%;
+    position: absolute;
+    padding: 5px 7px 5px 7px;
+    font-size: 60%;
+    height: auto;
+}
+/*--------------------------------------------------------*/
+/*------------------------ICONS--------------------------*/
+/*--------------------------------------------------------*/
+
 .ion-ios-cart-outline,
 .ion-ios-contact-outline{
     color: var(--white-color);
@@ -227,11 +272,14 @@ html {
     color: var(--secondary-color);
     transition: background-color 0.3s;
 }
-
-.sign-up{
-    padding-bottom: 0px;
-    padding-top: 10px;
+.ui-icon {
+    color: var(--white-color);
 }
+
+
+/*----------------------------------------------------------------*/
+/*------------------------DROP-DOWN MENU--------------------------*/
+/*----------------------------------------------------------------*/
 
 .dropdown-content {
     position: relative;
@@ -267,33 +315,37 @@ html {
     padding: 0px 10px;
 }
 
-/*Features section*/
+/*----------------------------------------------------------------*/
+/*------------------------FEATURES SECTION--------------------------*/
+/*----------------------------------------------------------------*/
+
 .features {
     display: flex;
 }
 
-.feature-home-delivery,
-.feature-100-organic,
-.feature-our-food,
-.feature-dining-experience {
+.box{
     display: inline-block;
     text-align: center;
     background-color: white;
     padding: 20px;
     border-radius: 10px;
 }
-
+.heading-3{
+font-size: 110%;
+    margin-bottom: 50px;
+    letter-spacing: normal;
+}
 .feature-heading-section {
     text-align: center;
     padding: 30px 0px;
 }
 
-.feature-heading {
+.heading-2 {
     margin-bottom: 20px;
     margin-top: 70px;
     font-size: 180%;
 }
-.feature-heading:after{
+.heading-2:after{
     content: "";
     height: 2px;
     display: block;
@@ -302,17 +354,24 @@ html {
     margin: 20px auto;
 
 }
+
+.section-features h3 {
+    margin-bottom: 10px;
+}
 .section-features p{
     line-height: 145%;
+    font-size: 90%;
 }
+
 .feature-long-text{
     width: 70%;
     margin-left: 15%;
 }
+
 .section-features i {
     font-size: 300%;
     color: var(--base-color);
-    margin-bottom: 30px;
+    margin-bottom: 10px;
     word-spacing: 2px;
 }
 
@@ -322,6 +381,3 @@ html {
 }
 
 
-.section-features h3 {
-    margin-bottom: 10px;
-}
