--- a/css/style.css
+++ b/css/style.css
@@ -404,7 +404,7 @@ html {
     text-align: center;
 }
 
-.category-heading{
+.category-heading {
     margin-top: 20px;
 }
 
@@ -428,7 +428,7 @@ html {
     opacity: 0.4;
 }
 
-.image-caption{
+.image-caption {
     width: 100%;
     height: 100%;
     margin-top: 0px;
@@ -442,8 +442,11 @@ html {
     position: absolute;
     z-index: 2;
     text-align: center;
-    padding-top: 32%;
+    display: flex;
+    justify-content: center; /*horizonatally align at center*/
+    align-items: center; /*vertically align at center*/
 }
+
 .section-favourite-meals ul {
     width: 100%;
     list-style: none;
