--- a/css/style.css
+++ b/css/style.css
@@ -417,7 +417,7 @@ html {
     height: auto;
     transform: scale(1);
     background-color: black;
-    opacity: 0.7;
+    opacity: 0.8;
 }
 
 .galley-image:hover {
@@ -455,6 +455,9 @@ html {
 
 .section-favourite-meals li {
     display: inline-block;
+}
+.section-favourite-meals img{
+    display: block;
 }
 
 .section-favourite-meals figure {
