--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,10 @@ html {
     text-rendering: optimizeLegibility;
 }
 
+.show {
+    visibility: visible !important;
+}
+
 /*---------------------------------------------------------------*/
 /*------------------------REUSABLE COMPONENT---------------------*/
 /*---------------------------------------------------------------*/
@@ -427,7 +431,13 @@ html {
     height: auto;
     opacity: 0.4;
 }
-
+.zoom-image{
+    transform: scale(1.3);
+    transition: transform 0.5s;
+    width: 100%;
+    height: auto;
+    opacity: 0.4;
+}
 .image-caption {
     width: 100%;
     height: 100%;
@@ -456,7 +466,8 @@ html {
 .section-favourite-meals li {
     display: inline-block;
 }
-.section-favourite-meals img{
+
+.section-favourite-meals img {
     display: block;
 }
 
